bk_ida/gccida/g0/remove_useless_values
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/remove_useless_values/src/cselib.c:846:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, ( htab_trav)discard_useless_locs, 0LL); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/remove_useless_values/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/remove_useless_values/src/cselib.c:849:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, ( htab_trav)discard_useless_values, 0LL); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/remove_useless_values/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/remove_useless_values/src/obj/cselib.o] Error 1
